--- a/index.html
+++ b/index.html
@@ -1,94 +1,171 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tienda Online JS</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
+    integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <title>Tienda Online JS</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
+
 <body>
-    <div class="container">
-        <h1>Tienda Online</h1>
-        <hr>
-    </div>
-    <div class="container">
-        <h4>Productos</h4>
-        <div class="row" id="cards"></div>
-        <h4>Carrito</h4>
-        <table class="table">
+  <div class="container-fluid p-0">
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">SportShoes</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#productos">Productos</a>
+              </li>
+              <li class="nav-item">
+                <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                  <i class="fas fa-shopping-cart"></i>
+                  <span class="numeroItems">0</span>
+                </button>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <section class="main">
+      <div class="bg-image shadow">
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <div class="row">
+              <div class="col-12">
+                <h1 class="text-center">Bienvenido a SportShoes</h1>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-12">
+                <p class="text-center">
+                  Somos una tienda online dedicada a la venta de zapatos de deportes. Ofrecemos una gran variedad de zapatos, siempre de la mejor calidad. ¡No te quedes sin comprar!
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+    </section>
+  </div>
+  <!-- -------------------- MODAL -------------------------------- -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <table class="table">
             <thead>
-            <tr>
+              <tr>
                 <th scope="col">#</th>
                 <th scope="col">Item</th>
                 <th scope="col">Cantidad</th>
                 <th scope="col">Acción</th>
                 <th scope="col">Total</th>
-            </tr>
-          </thead>
-          <tbody id="items"></tbody>
-          <tfoot>
-            <tr id="footer">
-              <th scope="row" colspan="5">Carrito vacío - comience a comprar!</th>
-            </tr>
-          </tfoot>
-        </table>
-      </div>
-  
-
-      <!-- ********** TEMPLATES ************** -->
-
-
-      <template id="template-footer">
-          <th scope="row" colspan="2">Total productos</th>
-          <td class="total-products">10</td>
-          <td>
-              <button class="btn btn-outline-danger btn-sm" id="vaciar-carrito">
-                  Vaciar Carrito
-              </button>
-          </td>
-          <td class="font-weight-bold">$ <span>5000</span></td>
-      </template>
-      
-      <template id="template-carrito">
-        <tr>
-          <th scope="row">id</th>
-          <td class="title">Café</td>
-          <td class="quantity">1</td>
-          <td>
-              <button class="btn btn-outline-success btn-sm add">
-                  +
-              </button>
-              <button class="btn btn-outline-danger btn-sm remove">
-                  -
-              </button>
-          </td>
-          <td>$ <span>500</span></td>
-        </tr>
-      </template>
-  
-
-    <template id="template-card">
-        <div class="col-lg-4 col-md-6 col-sm-12 mb-2">
-          <div class="card">
-              <img src="" alt="" class="card-img-top img-fluid">
-            <div class="card-body">
-              <h5>Titulo</h5>
-              <p>precio</p>
-              <button class="btn btn-outline-dark">Comprar</button>
-            </div>
-          </div>
+              </tr>
+            </thead>
+            <tbody id="items"></tbody>
+            <tfoot>
+              <tr id="footer">
+                <th scope="row" colspan="5">Carrito vacío - comience a comprar!</th>
+              </tr>
+            </tfoot>
+          </table>
         </div>
-      </template>
-      
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- ---------------------- FIN MODAL -------------------------- -->
+  <div class="container">
+    <h2 class="text-center" id="productos">Productos</h2>
+    <hr>
+    <div class="row" id="cards"></div>
+  </div>
 
 
+  <!-- ********** TEMPLATES ************** -->
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="/js/generalVariables.js"></script>
-    <script src="/js/App.js"></script>
-    <script src="/js/showItems.js"></script>
-    <script src="/js/addToCart.js"></script>
-    <script src="/js/localStorage.js"></script>
+
+  <template id="template-footer">
+    <th scope="row" colspan="2">Total productos</th>
+    <td class="total-products">10</td>
+    <td>
+      <button class="btn btn-outline-danger btn-sm" id="vaciar-carrito">
+        Vaciar Carrito
+      </button>
+    </td>
+    <td class="font-weight-bold">$ <span>5000</span></td>
+  </template>
+
+  <template id="template-carrito">
+    <tr>
+      <th scope="row">id</th>
+      <td class="title">Café</td>
+      <td class="quantity">1</td>
+      <td>
+        <button class="btn btn-outline-success btn-sm add">
+          +
+        </button>
+        <button class="btn btn-outline-danger btn-sm remove">
+          -
+        </button>
+      </td>
+      <td>$ <span>500</span></td>
+    </tr>
+  </template>
+
+
+  <template id="template-card">
+    <div class="col-lg-4 col-md-6 col-sm-12 mb-2">
+      <div class="card">
+        <img src="" alt="" class="card-img-top img-fluid">
+        <div class="card-body">
+          <h5>Titulo</h5>
+          <p>precio</p>
+          <button class="btn btn-outline-dark buttonBuy">Comprar</button>
+        </div>
+      </div>
+    </div>
+  </template>
+
+
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+    integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="/js/generalVariables.js"></script>
+  <script src="/js/App.js"></script>
+  <script src="/js/showItems.js"></script>
+  <script src="/js/addToCart.js"></script>
+  <script src="/js/modal.js"></script>
+  <script src="/js/navbar.js"></script>
 </body>
+
 </html>
