--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
-    integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
+  crossorigin="anonymous" referrerpolicy="no-referrer" />
   <title>Tienda Online JS</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -27,13 +27,13 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                <a class="nav-link" href="index.html" style="color: white;">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#productos">Productos</a>
+                <a class="nav-link" href="#productos" style="color: white;">Productos</a>
               </li>
               <li class="nav-item">
-                <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#exampleModal1">
                   <i class="fas fa-shopping-cart"></i>
                   <span class="numeroItems">0</span>
                 </button>
@@ -66,7 +66,7 @@
     </section>
   </div>
   <!-- -------------------- MODAL -------------------------------- -->
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal fade" id="exampleModal1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content">
         <div class="modal-header">
@@ -93,18 +93,84 @@
           </table>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
+          <button type="button" class="btn btn-outline-danger" data-bs-dismiss="modal">Cerrar</button>
+          <button type="button" class="btn btn-outline-success" data-bs-dismiss="modal" data-bs-toggle="modal" data-bs-target="#exampleModal2">Comprar</button>
         </div>
       </div>
     </div>
   </div>
   <!-- ---------------------- FIN MODAL -------------------------- -->
+  <!-- ---------------------- MODAL 2 -------------------------- -->
+  <div class="modal fade" id="exampleModal2" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="staticBackdropLabel">Confirmacion de compra</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <form action="">
+          <div class="form-floating mb-3">
+            <input type="email" required class="form-control" id="floatingEmail" placeholder="email@ejemplo.com">
+            <label for="floatingInput">Email</label>
+          </div>
+          <div class="form-floating mb-3">
+            <input type="text" required class="form-control" id="floatingName" placeholder="Nombre y Apellido">
+            <label for="floatingName">Nombre</label>
+          </div>
+          <div class="form-floating mb-3">
+            <input type="text" required class="form-control" id="floatingAddress" placeholder="Direccion">
+            <label for="floatingAddress">Direccion</label>
+        </div>
+        <div class="form-floating mb-3">
+          <input type="number" required class="form-control" id="floatingPhone" placeholder="Telefono">
+          <label for="floatingMobile">Telefono</label>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-outline-danger" data-bs-dismiss="modal">Close</button>
+          <button type="submit" class="btn btn-outline-success" id="buttonConfirm" data-bs-dismiss="modal">Confirmar</button>
+        </div>
+      </form>
+      </div>
+    </div>
+  </div>
+  </div>
+  <!-- ---------------------- FIN MODAL 2 -------------------------- -->
   <div class="container">
     <h2 class="text-center" id="productos">Productos</h2>
     <hr>
     <div class="row" id="cards"></div>
   </div>
+  <footer class="footer">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-12">
+          <ul class="nav justify-content-center navfooter">
+            <li class="nav-item">
+              <a class="nav-link" href="#">
+                <i class="fab fa-facebook-square"></i>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">
+                <i class="fab fa-twitter-square"></i>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">
+                <i class="fab fa-instagram"></i>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">
+                <i class="fab fa-youtube"></i>
+              </a>
+            </li>
+          
+        </ul>
+        </div>
+      </div>
+    </div>
 
 
   <!-- ********** TEMPLATES ************** -->
@@ -115,7 +181,7 @@
     <td class="total-products">10</td>
     <td>
       <button class="btn btn-outline-danger btn-sm" id="vaciar-carrito">
-        Vaciar Carrito
+        Vaciar
       </button>
     </td>
     <td class="font-weight-bold">$ <span>5000</span></td>
