--- a/index.html
+++ b/index.html
@@ -226,12 +226,12 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
     integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="/js/generalVariables.js"></script>
-  <script src="/js/App.js"></script>
-  <script src="/js/showItems.js"></script>
-  <script src="/js/addToCart.js"></script>
-  <script src="/js/modal.js"></script>
-  <script src="/js/navbar.js"></script>
+  <script src="js/generalVariables.js"></script>
+  <script src="js/App.js"></script>
+  <script src="js/showItems.js"></script>
+  <script src="js/addToCart.js"></script>
+  <script src="js/modal.js"></script>
+  <script src="js/navbar.js"></script>
 </body>
 
 </html>
