--- a/index.html
+++ b/index.html
@@ -30,7 +30,18 @@
                 <a class="nav-link" href="index.html" style="color: white;">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#productos" style="color: white;">Productos</a>
+                <a class="nav-link linkProduct" href="#productos" style="color: white;">Productos</a>
+              </li>
+              <li class="nav-item">
+                <div class="dropdown">
+                  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                    Filtro
+                  </button>
+                  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                    <li><a class="dropdown-item" href="#">Deportiva</a></li>
+                    <li><a class="dropdown-item" href="#">Informal</a></li>
+                  </ul>
+                </div>
               </li>
               <li class="nav-item">
                 <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#exampleModal1">
