--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
                     Filtro
                   </button>
                   <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                    <li><a class="dropdown-item" href="#">Deportiva</a></li>
-                    <li><a class="dropdown-item" href="#">Informal</a></li>
+                    <li><a class="dropdown-item filter" id="filterAll">Todos</a></li>
+                    <li><a class="dropdown-item filter" id="filterDeportiva">Deportiva</a></li>
+                    <li><a class="dropdown-item filter" id="filterInformal">Informal</a></li>
                   </ul>
                 </div>
               </li>
@@ -217,7 +218,7 @@
 
 
   <template id="template-card">
-    <div class="col-lg-4 col-md-6 col-sm-12 mb-2">
+    <div class="cardContainer col-lg-4 col-md-6 col-sm-12 mb-2">
       <div class="card">
         <img src="" alt="" class="card-img-top img-fluid">
         <div class="card-body">
