--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
                     Filtro
                   </button>
                   <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                    <li><a class="dropdown-item filter" id="filterAll">Todos</a></li>
-                    <li><a class="dropdown-item filter" id="filterDeportiva">Deportiva</a></li>
-                    <li><a class="dropdown-item filter" id="filterInformal">Informal</a></li>
+                    <li><a class="dropdown-item filter" category="all" id="filterAll">Todos</a></li>
+                    <li><a class="dropdown-item filter" category="Deportiva" id="filterDeportiva">Deportiva</a></li>
+                    <li><a class="dropdown-item filter" category="Informal" id="filterInformal">Informal</a></li>
                   </ul>
                 </div>
               </li>
