--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">SportShoes</a>
+          <button class="btn btn-secondary dropdown-toggle d-lg-none" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+            Filtro
+          </button>
+          <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+            <li><a class="dropdown-item filter" category="all" id="filterAll">Todos</a></li>
+            <li><a class="dropdown-item filter" category="Deportiva" id="filterDeportiva">Deportiva</a></li>
+            <li><a class="dropdown-item filter" category="Informal" id="filterInformal">Informal</a></li>
+          </ul>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
