--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         <img src="" alt="" class="card-img-top img-fluid">
         <div class="card-body">
           <h5>Titulo</h5>
-          <p>precio</p>
+          <p><span>$</span>Precio</p>
           <button class="btn btn-outline-dark buttonBuy">Comprar</button>
         </div>
       </div>
