--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
           <label for="floatingMobile">Telefono</label>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-outline-danger" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-outline-danger" data-bs-dismiss="modal">Cerrar</button>
           <button type="submit" class="btn btn-outline-success" id="buttonConfirm" data-bs-dismiss="modal">Confirmar</button>
         </div>
       </form>
@@ -156,6 +156,14 @@
   </div>
   </div>
   <!-- ---------------------- FIN MODAL 2 -------------------------- -->
+  <!-- CART MOBILE -->
+    <div class="cartMobile">
+      <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#exampleModal1">
+        <i class="fas fa-shopping-cart"></i>
+        <span class="numeroItemsMobile">0</span>
+      </button>
+    </div>
+  <!-- FIN CART MOBILE -->
   <div class="container">
     <h2 class="text-center" id="productos">Productos</h2>
     <hr>
